<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Login">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        app:title="@string/criarconta"
        app:titleCentered="true"
        app:titleTextColor="@color/white"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_marginBottom="60dp"/>

    <EditText
        android:id="@+id/edt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/nome"
        android:textColor="#959595"
        android:textSize="25dp"
        android:backgroundTint="@color/cinzaclaro"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:id="@+id/edt_criarcontaemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/email"
        android:textColor="#959595"
        android:textSize="25dp"
        android:backgroundTint="@color/cinzaclaro"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:id="@+id/edt_criarcontasenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/senha"
        android:textColor="#959595"
        android:textSize="25dp"
        android:backgroundTint="@color/cinzaclaro"
        android:background="@drawable/rounded_edittext"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/btn_criarcontacadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/cadastrar"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:backgroundTint="@color/orange"
        app:cornerRadius="15dp"/>
</LinearLayout>