<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Encomendas">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@color/orange"
        app:title="@string/encomendas"
        app:titleCentered="true"
        app:titleTextColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/produto"
            android:layout_width="88dp"
            android:layout_height="84dp"
            android:layout_marginLeft="80dp"
            android:src="@drawable/imgCadastrar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/produto"
            android:text="@string/produto"
            android:textSize="30dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/buscar"
            android:layout_width="88dp"
            android:layout_height="84dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/imgBuscar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/buscar"
            android:text="@string/pesquisar"
            android:textSize="30dp" />

    </RelativeLayout>


</LinearLayout>